--- a/MBur.Threading/MBur.Threading.csproj
+++ b/MBur.Threading/MBur.Threading.csproj
@@ -8,4 +8,8 @@
     <StartupObject />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>TRACE;CDS_COMPILE_JUST_THIS</DefineConstants>
+  </PropertyGroup>
+
 </Project>
